@@ -1,7 +1,12 @@
 ufsutils (8.2-4) UNRELEASED; urgency=low
 
+  [ Robert Millan ]
   * Import 00_portable_berase.patch from upstream trunk.  Refresh all
     patches.
+
+  [ Guillem Jover ]
+  * Add build-indep and build-arch debian/rules targets:
+    - Rename build to build-arch and install to install-arch.
 
  -- Robert Millan <rmh@debian.org>  Thu, 08 Dec 2011 13:40:32 +0100
 
